[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Level/Dev.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 8, 0, 0, 0, 0, 464, 8 )
}

[node name="Dev" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
light_mask = 0
margin_left = -96.0
margin_top = -24.0
margin_right = 600.0
margin_bottom = 624.0
color = Color( 0.00392157, 0.0431373, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="ColorRect"]
position = Vector2( 320, 0 )
amount = 40
lifetime = 10.0
emission_shape = 2
emission_rect_extents = Vector2( 355, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.6
scale_amount = 3.0
scale_amount_random = 1.0

[node name="Game" parent="." instance=ExtResource( 1 )]

[node name="MeteorSpawnPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="MeteorSpawnPath"]
position = Vector2( 0, 8 )

[node name="MeteorSpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="timeout" from="MeteorSpawnTimer" to="." method="_on_MeteorSpawnTimer_timeout"]
